--- a/contactinfo-app/package.json
+++ b/contactinfo-app/package.json
@@ -15,6 +15,7 @@
   "author": "Jason Groff",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.0.10"
   }
 }
