--- a/contactinfo-app/package.json
+++ b/contactinfo-app/package.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.10"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
