--- a/phone-book-app/package.json
+++ b/phone-book-app/package.json
@@ -6,16 +6,14 @@
   "scripts": {
     "test": "node, mongoose, mongo, phone-book"
   },
-  "keywords": [
-    "node",
-    "mongodb",
-    "mongoose",
-    "phone-book"
-  ],
+  "keywords": ["node", "mongodb", "mongoose", "phone-book"],
   "author": "Jason Groff",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
