--- a/compact-contact-form/package.json
+++ b/compact-contact-form/package.json
@@ -6,16 +6,14 @@
   "scripts": {
     "test": "node, mongodob, mongoose, compact-contact-form"
   },
-  "keywords": [
-    "node",
-    "mongodb",
-    "mongoose",
-    "compact-contact-form"
-  ],
+  "keywords": ["node", "mongodb", "mongoose", "compact-contact-form"],
   "author": "Jason Groff",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
