Week 6 Day 2: Postal Address App - Finished

--- a/postal-address-app/package.json
+++ b/postal-address-app/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "node, mongodb, mongoose, postal-address-app"
   },
-  "keywords": ["node", "mongodb", "mongoose", "postal-address-app"],
+  "keywords": [
+    "node",
+    "mongodb",
+    "mongoose",
+    "postal-address-app"
+  ],
   "author": "Jason Groff",
   "license": "ISC",
   "dependencies": {
